# CacheRoute

./: Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
UI/client_ui/: app.py
client/: README.md  command_input.py  kv_timing_sender.py  perf_client.py  workload_simple_example.json
core/: __init__.py  config.py  interface.py  model_MLA_calculation.py  model_calculation.py  request.py  tokenizer_registry.py
data/: kdn_text_base.yaml  knowledge.txt  knowledge_base.yaml  model_configs.yaml  raw_data.yaml
doc/: CacheRoute project.vsdx  CacheRoute-v0.2.0-plan-CN.md  CacheRoute-v0.2.0-plan.md  CacheRoute_arch.vsdx  CacheRoute_workflow.vsdx  CacheRoute开发日志.docx  ~$$CacheRoute project.~vsdx  讨论1.docx
env/: README.md  memory_management.py  model_download.py  sanity_check.py  token_database.py  tokenizer_config.json
instance/: __init__.py  instance_api.py
kdn_server/: README.md  kdn_api.py  kdn_register_cli.py  kv_builder.py  kv_injector.py  text1.txt  text_db.py  测试用知识块1.txt  测试用知识块2.txt  测试用短的纯文本10个例子.txt
model/: model_config.py  model_configs.yaml
proxy/: README.md  proxy.py  proxy_cli.py
scheduler/: README.md  __init__.py  scheduler.py  scheduler_cli.py
store/: knowledge_base.py
test/: Injection_method_comparison.py  Prefill_calculation.py  README.md  demo_client.py  demo_embedding.py  demo_instance.py  demo_kdn.py  demo_proxy.py  demo_request_handle.py  demo_run.py  demo_scheduler.py  request_handle.py  test.py  test_demo_instance_ui.py  test_injector_reuse.py  test_kb_kid.py
util/: apply_pr_to_plain_dir.sh  timer.py
(+53 files in other folders)
