
[project]
name = "cacheroute"
version = "0.1.8"
description = "Compute-network-aware LLM scheduling for flexible KV cache reuse across vLLM and LMCache systems."
authors = [
  { name = "xxx", email = "xxx" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn",
    "jupyter_client",
    "aiohttp>=3.9.0",
    "pydantic>=2.6.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.1.0",

]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
  "black>=24.0.0",
  "isort>=5.13.0",
  "mypy>=1.11.0",
]

[tool.setuptools]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "docs*", "examples*"]

